--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -12,7 +12,7 @@ resources.db.params.host = localhost
 resources.db.params.port = 8889
 resources.db.params.username = root
 resources.db.params.password = root
-resources.db.params.dbname = iso11179test
+resources.db.params.dbname = ISO11179
 
 [staging : production]
 
