added decorations + bug fixing

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -29,3 +29,5 @@ database.host = localhost:8889
 database.username = root
 database.password = root
 database.name = iso11179test
+
+lucene.dir="../SearchIndex"
